--- a/.env.example
+++ b/.env.example
@@ -19,9 +19,9 @@ SECRET_KEY=your-secret-key-here-change-in-production
 GEMINI_API_KEY=your_gemini_api_key_here
 
 # Cyoda MCP Integration (Optional - for bonus features)
-# Contact Cyoda for access: https://cyoda.com/contact
+# Deploy Cyoda environment at ai.cyoda.net and ask for credentials in the chatbot
 CYODA_API_KEY=your_cyoda_api_key_here
-CYODA_API_URL=https://api.cyoda.net
+CYODA_API_URL=https://client-ID.eu.cyoda.net
 
 # ============================================
 # Paths
